tests/expectations/compiler/futures/future_parameter_fail.out
Error [ETYC0372116]: Finals may only appear as parameters to final fn.
    --> compiler-test:2:14
     |
   2 |     fn first(x: Final) -> Final {
     |              ^^^^^^^^
Error [ETYC0372116]: Finals may only appear as parameters to final fn.
    --> compiler-test:6:15
     |
   6 |     fn second(x: Final) -> u8 {
     |               ^^^^^^^^
Error [ETYC0372116]: Finals may only appear as parameters to final fn.
    --> compiler-test:11:10
     |
  11 | fn third(x: Final) -> u8 {
     |          ^^^^^^^^
